# cecs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  flake.nix  justfile
.github/workflows/: rust.yml
benches/: core_benchmarks.rs  persistence_benchmarks.rs  query_benchmarks.rs
src/: allocator.rs  archetype.rs  bundle.rs  commands.rs  db.rs  entity_id.rs  entity_index.rs  handle_table.rs  job_system.rs  lib.rs  page_table.rs  persister.rs  prelude.rs  query.rs  query_set.rs  resources.rs  scheduler.rs  serde.rs  systems.rs  table.rs  tests.rs  world_access.rs  world_tests.rs
src/db/: db_tests.rs
src/entity_index/: serde_impl.rs
src/handle_table/: serde_impl.rs
src/job_system/: queue.rs
src/page_table/: pt_iter.rs  serde_impl.rs
src/query/: filters.rs  query_tests.rs  resource_query.rs
src/query_set/: test.rs
src/systems/: test.rs  tests.rs
