[package]
name = "cecs"
version = "0.1.3"
edition = "2021"
description = "Entity database for the game 'Cao-Lo'"
license = "MIT"
repository = "https://github.com/caolo-game/cecs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel", "tracing"]
parallel = ["dep:lazy_static"]
clone = []
serde = ["dep:serde"]

[dependencies]
cache-padded = "1.2.0"
crossbeam-deque = "0.8.2"
lazy_static = { version = "1.4.0", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
smallvec = "1"
thiserror = "1"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
bincode = "1"
serde_json = { version = "1" }
tracing-test = "0.2"
