[package]
name = "cecs"
version = "0.1.6"
edition = "2021"
description = "Entity database for the game 'Cao-Lo'"
license = "MIT"
repository = "https://github.com/caolo-game/cecs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel", "tracing"]
parallel = [
    "dep:lazy_static",
    "dep:parking_lot",
    "dep:crossbeam-deque",
    "dep:cache-padded",
    "dep:futures-lite",
]
clone = []
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
smallvec = "1"
thiserror = "1"
tracing = { version = "0.1", optional = true }
cache-padded = { version = "1.2.0", optional = true }
crossbeam-deque = { version = "0.8.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }
parking_lot = { version = "0.12.1", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
rustc-hash = "2.0.0"
cfg-if = "1.0.0"
futures-lite = { version = "2.3.0", optional = true }

[dev-dependencies]
bincode = "1"
serde_json = { version = "1" }
tracing-test = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "persistence_benchmarks"
harness = false
required-features = ["serde"]
